objects/PL_Broker_Accreditation__c.object
<CustomObject>
    <fields>
        <fullName>Accreditation_URL__c</fullName>
        <formula>$Label.PL_Accreditation_Base_URL + &quot;?id=&quot; + Id + &quot;&amp;p1=&quot; + P1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Accreditation URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Aggregator_Changed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Aggregator Changed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Aggregator__c</fullName>
        <label>Aggregator</label>
        <length>120</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>Suburb</label>
        <length>120</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Lookup to Broker Contact Record</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>PL Broker Accreditations</relationshipLabel>
        <relationshipName>PL_Broker_Accreditations</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <required>true</required>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Estimated_Submissions_Per_Month__c</fullName>
        <label>Estimated Submissions Per Month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>If_so_with_who__c</fullName>
        <label>If so, with who</label>
        <length>50000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opt_In__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Opt In</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>P1_Timestamp__c</fullName>
        <description>Date P1 was last set.  Used to determine if P1 is still valid.</description>
        <label>P1 Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>P1__c</fullName>
        <description>Parameter to store random string</description>
        <label>P1</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <required>true</required>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Postcode__c</fullName>
        <label>Postcode</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Production_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Production ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Record_Lock__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Record Lock</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Record_Number__c</fullName>
        <description>Number for the record</description>
        <displayFormat>{0}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <label>Street</label>
        <length>120</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Submitted_PL_Before__c</fullName>
        <label>Submitted a Personal Loan Before</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>PL Broker Accreditation</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PL-{00000000}</displayFormat>
        <label>PL Broker Accreditation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PL Broker Accreditations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Aggregator_Default_Commission_Plan</fullName>
        <active>true</active>
        <description>Default commission plan must be selected on aggregator when adding this record</description>
        <errorConditionFormula>ISBLANK( Contact__r.Account.Default_PL_Commission_Plan__c )</errorConditionFormula>
        <errorMessage>Aggregator default PL commission plan must be populated.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Broker_Email_Populated</fullName>
        <active>true</active>
        <description>Is Broker Email Populated?</description>
        <errorConditionFormula>ISBLANK(Contact__r.Email)</errorConditionFormula>
        <errorMessage>Email address on the Broker Contact record must be populated.</errorMessage>
    </validationRules>
</CustomObject>